# gtasks-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_GUIDE.md  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: python.yml
.specify/memory/: constitution.md
docs/: README.md  textual-framework-guide.md
specs/001-google-tasks-cli-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-google-tasks-cli-tui/checklists/: requirements.md
specs/001-google-tasks-cli-tui/contracts/: google-tasks-api.md  tui-events.md
specs/002-add-vim-keybindings/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-vim-keybindings/: FEATURE_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-add-logging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-improve-tui-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/gtasks_manager/: __init__.py  auth.py  cli.py  config.py  logging_config.py  task_cache.py  tasks.py
src/gtasks_manager/cli/: main.py  (+2 more)
tests/: conftest.py
tests/contract/: test_google_tasks_adapter.py
tests/integration/: test_accessibility_focus.py  test_cli_commands.py  test_cli_workflow.py  test_logging_integration.py  test_toggle_completion.py  test_tui_flow.py  test_tui_navigation.py
tests/unit/: test_cli.py  test_cli_formatters.py  test_config.py  test_keybindings.py  test_logging_config.py  test_models.py  test_services.py  test_shortcut_conflicts.py  test_state.py  test_task_cache.py  test_toggle_optimistic.py  test_tui.py
(+25 files in other folders)
