[project]
name = "gtasks-manager"
version = "0.1.0"
description = "A command-line tool for managing Google Tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "click>=8.0.0",
]

[project.scripts]
gtasks = "gtasks_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtasks_manager"]
